--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gabriel S.</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    
-    <header class="header" id="header">
-      <nav class="nav container">
-        <a href="" class="nav-logo">GS.</a>
-        <div class="nav-menu" id="nav-menu">
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="#experience" class="nav-link">Experiência</a>
-            </li>
-            <li class="nav-item">
-              <a href="#project" class="nav-link">Projetos</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="nav-link">Contato</a>
-            </li>
-          </ul>
-          <div class="nav-close" id="nav-close">
-            <i class="ri-close-line"> </i>
-          </div>
-        </div>
-        <div class="nav-button">
-            <div class="nav-toggle" id="nav-toggle">
-                <i class="ri-menu-4-line"></i>
-            </div>
-        </div>
-      </nav>
-    </header>
 
-    <script src="/js/scrollReveal.min.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gabriel S.</title>
+  <link rel="stylesheet" href="/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+</head>
+
+<body>
+
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="" class="nav-logo">GS.</a>
+      <div class="nav-menu" id="nav-menu">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#experience" class="nav-link">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#project" class="nav-link">Project</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+        </ul>
+        <div class="nav-close" id="nav-close">
+          <i class="ri-close-line"> </i>
+        </div>
+      </div>
+      <div class="nav-button">
+        <div class="nav-toggle" id="nav-toggle">
+          <i class="ri-menu-4-line"></i>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <div class="hero">
+    <div class="container-medium">
+      <p>Hey, i'm</p>
+      <h1>Gabriel Savaccini</h1>
+      <p>I'm a analist based in São Paulo, Brazil and also a javascript and react student, front-end path. I enjoy
+        creating things that live on the internet, whether that be websites, applications, or anything in between to
+        expand my knowledge and thus improve skillswith a lot of attitude to make each day a new experience with new
+        opportunities.</p>
+      <h2>Say Hi<i class="ri-arrow-right-s-line"></i></h2>
+    </div>
+  </div>
+
+  <script src="/js/scrollReveal.min.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
